day night function v1

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
   <div class="seconds"><span></span></div>
   <div class="center"></div>
 
+   <a href="#" id="day">Day</a> | 
+   <a href="#" id="night">Night</a>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur impedit quos blanditiis voluptatem iusto laborum et architecto eligendi nemo id quaerat quis aliquam facilis sed alias ea recusandae ullam labore!</p>
+
+
+
     
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
