background for different times

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Clock</title>
 
+    <link href="favicon.ico" rel="icon" type="image/x-icon" />
+
     <link rel="stylesheet" href="css/foundation.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
 
     <script src="js/vendor/modernizr.js"></script>
+
   </head>
   <body>
     
@@ -20,10 +24,8 @@
   <div class="seconds"><span></span></div>
   <div class="center"></div>
 
-   <a href="#" id="day">Day</a> | 
-   <a href="#" id="night">Night</a>
+  
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur impedit quos blanditiis voluptatem iusto laborum et architecto eligendi nemo id quaerat quis aliquam facilis sed alias ea recusandae ullam labore!</p>
 
 
 
