--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     
-    <h1>What's the time?</h1>
+    <h1>What time is it?</h1>
 
   <div class="clock">
   <div class="hours"><span></span></div>
