--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="js/vendor/modernizr.js"></script>
 
   </head>
+  
+<div class="container_12">
   <body>
     
     <h1>What time is it?</h1>
@@ -33,5 +35,6 @@
     </script>
   
   </body>
+</div>
 </html>
 
