--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
     
     <h1>What time is it?</h1>
 
-
+  <script type="text/javascript">
+    setTimeout(function(){
+      location = ''
+    },3600000)
+  </script>
 
 
   <div class="clock">
